tests/instantiating/invalid/invalid_type_of_array_size/bus.fbd
main bus
	foo ["abc"] status
		width = 10
